--- a/build.gradle
+++ b/build.gradle
@@ -2,13 +2,12 @@
 
 buildscript {
     repositories {
-        google()
         jcenter()
-        
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.0'
-        
+        classpath 'com.android.tools.build:gradle:4.0.2'
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -16,12 +15,17 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
         jcenter()
-        
+        google()
     }
 }
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
+ext {
+    compileSdkVersion = 30
+    buildToolsVersion = '30.0.2'
+    supportLibsVersion = '30.0.2'
+    targetSdkVersion = 30
+    minSdkVersion = 24
+    versionCode = 13
+    versionName = "0.4.3"
 }
